--- a/Notepad2.0/Properties/Resources.resx
+++ b/Notepad2.0/Properties/Resources.resx
@@ -114,4 +114,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="SaveFileDialogFilter" xml:space="preserve">
+    <value>Text File (*.txt)|*.txt|Rich Text File (*.rtf)|*.rtf|All Files (*.*)|*.*</value>
+  </data>
+  <data name="SaveFileDialogTitle" xml:space="preserve">
+    <value>Save File As...</value>
+  </data>
 </root>
